@@ -1,13 +1,14 @@
-FROM csanchez/jenkins-for-volumes
+FROM jenkins/jenkins:lts
 
-RUN /usr/local/bin/install-plugins.sh durable-task:1.12 credentials:2.1.4 kubernetes:0.7
+RUN /usr/local/bin/install-plugins.sh kubernetes:0.12
 
-# ENV VERSION 0.4-SNAPSHOT
+# ARG VERSION=0.12-SNAPSHOT
 # COPY target/kubernetes.hpi /usr/share/jenkins/ref/plugins/kubernetes.hpi
 # RUN curl -o /usr/share/jenkins/ref/plugins/kubernetes.hpi \
-#  http://repo.jenkins-ci.org/snapshots/org/csanchez/jenkins/plugins/kubernetes/0.4/kubernetes-$VERSION.hpi
+#  http://repo.jenkins-ci.org/snapshots/org/csanchez/jenkins/plugins/kubernetes/0.12/kubernetes-$VERSION.hpi
 
 # remove executors in master
 COPY src/main/docker/master-executors.groovy /usr/share/jenkins/ref/init.groovy.d/
 
 # ENV JAVA_OPTS="-Djava.util.logging.config.file=/var/jenkins_home/log.properties"
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
